add deploy script

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/card-logo.svg" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="./images/card-logo.svg" />
+    <link rel="stylesheet" href="./style.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment</title>
   </head>
@@ -14,7 +14,7 @@
         <section class="payment__cards">        
         </section>          
         <button type="button" class="payment__add">
-          <img src="/images/credit-card.png" class="payment__card">
+          <img src="./images/credit-card.png" class="payment__card">
           Add payment method
         </button>
         <button type="submit" class="payment__submit">Submit</button>
@@ -23,11 +23,11 @@
         <div class="card__overlay">
           <form class="card__add">  
             <div class="card__pic">
-              <img src="/images/chip.png" alt="" class="card__chip">
+              <img src="./images/chip.png" alt="" class="card__chip">
               <p id="card-name" class="card__name">Vasya Pupkin</p>
               <p id="card-expiration" class="card__date">09/25</p>
               <p id="card-number" class="card__number">0000 9999 2222 3333</p>
-              <img src="/images/visa-whit.png" alt="" class="card__visa-logo">
+              <img src="./images/visa-whit.png" alt="" class="card__visa-logo">
             </div>          
             <div class="card__data">
               <label class="card__label">Name 
