--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>        
       <template id="cards">
         <label class="payment__method">
-          <img class="payment__method-logo" src="/images/master.png" alt="иконка платежной системы">
+          <img class="payment__method-logo" src="./images/master.png" alt="иконка платежной системы">
           <p class="payment__method-number"></p>
           <p class="payment__method-expires">Expires</p>
           <p class="payment__method-date"></p>
