--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
               <button class="card__submit" type="submit">Submit</button>
             </div>          
           </form> 
-        </div>        
-        
+        </div>         
       </div>        
       <template id="cards">
         <label class="payment__method">
-          <img class="payment__method-logo" src="./images/mastercard.png" alt="иконка платежной системы">
+          <img src="./images/mastercard.png" class="payment__method-logo"  alt="иконка платежной системы">
           <p class="payment__method-number"></p>
           <p class="payment__method-expires">Expires</p>
           <p class="payment__method-date"></p>
