--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>        
       <template id="cards">
         <label class="payment__method">
-          <img src="./images/mastercard.png" class="payment__method-logo"  alt="иконка платежной системы">
+          <img src="./public/mastercard.png" class="payment__method-logo"  alt="иконка платежной системы">
           <p class="payment__method-number"></p>
           <p class="payment__method-expires">Expires</p>
           <p class="payment__method-date"></p>
