--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
                 <input 
                   class="card__input" 
                   id="number" 
-                  type="text" 
+                  type="text"
                   placeholder="16-digit card number"
                   minlength="16"
                   maxlength="16"
-                  pattern="\d{16}"
                   required />
                 <span class="validity number-error"></span>
               </label>            
@@ -73,7 +72,7 @@
                   minlength="3"   
                   maxlength="3"
                   placeholder="3-digit code"   
-                  pattern="\d{3}"
+
                   required />
                 <span class="validity cvv-error"></span>
               </label>
@@ -83,12 +82,11 @@
               <button class="card__submit" type="submit">Submit</button>
             </div>          
           </form> 
-        </div>        
-        
+        </div>         
       </div>        
       <template id="cards">
         <label class="payment__method">
-          <img class="payment__method-logo" src="./images/master.png" alt="иконка платежной системы">
+         <img src="./mastercard.png" class="payment__method-logo"  alt="иконка платежной системы">
           <p class="payment__method-number"></p>
           <p class="payment__method-expires">Expires</p>
           <p class="payment__method-date"></p>
