--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body class="page">
     <div class="page__container">
       <form class="payment">
+        <nav aria-label="Breadcrumb" class="breadcrumb">
+          <ul>
+            <li><a class="profile__link" href="/pages/profile.html">Account</a></li>
+            <li><a class="profile__link" href="../index.html">Payment methods</a></li>
+          </ul>
+        </nav>
         <h1 class="payment__title">Choose your payment method</h1>
         <section class="payment__cards">        
         </section>          
