--- a/profile.html
+++ b/profile.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Мой профиль</title>
-  <link rel="stylesheet" href="../assets/profile-c1c675ee.css">
+  <link rel="stylesheet" href="./assets/profile-c1c675ee.css">
 </head>
 <body class="page">
   <div class="page__container">
     <h1 class="account__title">Мой профиль</h1>
     <p class="account__data">Name: Vasya</p>
     <p class="account__data">Second name: Pupkin</p>
-    <a href="../index.html" class="profile__link">Payment methods</a>
+    <a href="index.html" class="profile__link">Payment methods</a>
   </div>
 </body>
 </html>
