--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <form class="payment">
         <nav aria-label="Breadcrumb" class="breadcrumb">
           <ul>
-            <li><a class="profile__link" href="/pages/profile.html">Account</a></li>
-            <li><a class="profile__link" href="../index.html">Payment methods</a></li>
+            <li><a class="profile__link" href="profile.html">Account</a></li>
+            <li>Payment methods</li>
           </ul>
         </nav>
         <h1 class="payment__title">Choose your payment method</h1>
