--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./profile.css" type="text/css">
+  <link rel="stylesheet" href="profile.css" type="text/css">
   <title>Мой профиль</title>
 </head>
 <body class="page">
@@ -12,7 +12,7 @@
     <h1 class="account__title">Мой профиль</h1>
     <p class="account__data">Name: Vasya</p>
     <p class="account__data">Second name: Pupkin</p>
-    <a href="../index.html" class="profile__link">Payment methods</a>
+    <a href="index.html" class="profile__link">Payment methods</a>
   </div>
 </body>
 </html>
